Add build tasks

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ variables:
  buildConfiguration: 'Release'
 steps:
 - task: UseDotNet@2
- displayName: 'Use .NET SDK 5.0'
+ displayName: '5.0'
  inputs:
  packageType: sdk
  version: '5.0'
