--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,18 +1,10 @@
-# ASP.NET Core
-# Build and test ASP.NET Core projects targeting .NET Core.
-# Add steps that run tests, create a NuGet package, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
-
-trigger:
-- '*'
+trigger: - '*'
 pool:
  vmImage: 'ubuntu-20.04'
- demands:
- - npm
+ demands: - npm
 variables:
  buildConfiguration: 'Release'
-steps:
-- task: UseDotNet@2
+steps: - task: UseDotNet@2
  displayName: 'Use .NET SDK 5.0.402'
  inputs:
  packageType: sdk
